# 8005

assign2/ldpreload_lab/: dynamic_ls.txt  libhide.c  strace_ls.txt  strace_lsm.txt  test1.txt  test2.txt
assign2/ldpreload_lab/labdata/: hide_me.txt
assign3/config/: main.py
assign3/source/: cracker.py  pwhash.sh  requirements.txt  shadow
project/: pyproject.toml  shell.nix
project/data/: benchmark.py  graph.py  results.csv  shadow2
project/source/: node.py  node_debug.py  node_test.py  requirements.txt  server.py  testing-vms.nix  worker.py
