[project]
name = "pwd-cracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crypt-r (>=3.13.1,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]

[dependency-groups]
dev = [
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
